packages/test/generatedCode/communications/calls/item/reject/rejectRequestBuilderPostRequestConfiguration.ts
import {RequestOption} from '@microsoft/kiota-abstractions';

export interface RejectRequestBuilderPostRequestConfiguration {
    /** Request headers */
    headers?: Record<string, string>;
    /** Request options */
    options?: RequestOption[];
}
